# wasm-websocket-upload-big-file

./: Cargo.toml  README.md  build.sh
pkg/: index.html  server.py  wasm_websocket_upload_big_file.d.ts  wasm_websocket_upload_big_file.js  wasm_websocket_upload_big_file_bg.wasm  wasm_websocket_upload_big_file_bg.wasm.d.ts  worker.js
src/: lib.rs
